[package]
name = "R4DCB08"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/acpiccolo/R4DCB08-Temperature-Collector"
description = "R4DCB08 protocol and commandline tool"

[lib]
name = "r4dcb08_lib"
path = "src/lib.rs"

[[bin]]
name = "tempcol"
path = "src/main.rs"
required-features = ["bin-dependencies"]

[features]
default = ["tokio-rtu-sync", "tokio-rtu", "bin-dependencies"]
bin-dependencies = [
    "dep:anyhow",
    "dep:log",
    "dep:tokio-serial",
    "dep:clap-verbosity-flag",
    "dep:clap-num",
    "dep:flexi_logger",
    "dep:dialoguer",
    "dep:humantime",
    "dep:paho-mqtt",
    "tokio-rtu-sync",
    "tokio-tcp-sync",
    "clap/derive",
    "serde",
    "dep:rand",
    "dep:humantime-serde",
]
tokio-rtu-sync = ["tokio-modbus/rtu-sync", "dep:tokio-serial"]
tokio-rtu = ["tokio-modbus/rtu", "dep:tokio-serial"]
tokio-tcp-sync = ["tokio/net", "tokio-modbus/tcp-sync"]
tokio-tcp = ["tokio/net", "tokio-modbus/tcp"]
serde = ["serde/derive"]

[dependencies]
thiserror = "2"
tokio-modbus = { version = "0.16", default-features = false, optional = true }
tokio-serial = { version = "5", optional = true }
tokio = { version = "1", default-features = false, optional = true }
serde = { version = "1.0", optional = true }
serde_yaml = "0.9"
# Requirements for bin
anyhow = { version = "1", optional = true }
log = { version = "0.4", optional = true }
clap = { version = "4", optional = true }
clap-verbosity-flag = { version = "3", optional = true }
clap-num = { version = "1", optional = true }
flexi_logger = { version = "0.31", optional = true }
dialoguer = { version = "0.12", optional = true }
humantime = { version = "2", optional = true }
paho-mqtt = { version = "0.13", optional = true }
rand = { version = "0.9", optional = true }
humantime-serde = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
assert_matches = "1"

[package.metadata.cargo-machete]
ignored = ["tokio", "humantime-serde"]
