[package]
name = "r4dcb08_amqtt"
version = "0.1.0"
edition = "2018"

[features]
default = ["async"]
async = ["tokio-modbus/rtu", "tokio-modbus/tcp", "r4dcb08_lib/async"]

[dependencies]
r4dcb08_lib = { path = "../core" }
#bytes = "0.4.0"
anyhow = "1"
tokio-modbus = { version = "0.9", default-features = false }
tokio-serial = { version = "5.4", default-features = false }
tokio = { version = "1.31.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }
futures = "0.3"
flexi_logger = { version = "0.25" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
humantime-serde = "1"
directories-next = "2"
structopt = "0.3"
paho-mqtt = "0.12"
ctrlc = "3.4"
