[package]
name = "r4dcb08_mqtt"
version = "0.1.0"
edition = "2018"

[features]
default = ["sync"]
sync = ["tokio-modbus/rtu-sync", "tokio-modbus/tcp-sync", "r4dcb08_lib/sync"]

[dependencies]
r4dcb08_lib = { path = "../core" }
#bytes = "0.4.0"
anyhow = "1"
tokio-modbus = { version = "0.9", default-features = false }
tokio-serial = { version = "5.4", default-features = false }
flexi_logger = { version = "0.25" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
humantime-serde = "1"
directories-next = "2"
structopt = "0.3"
paho-mqtt = "0.12"
ctrlc = "3.4"
